--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -30,6 +32,7 @@
     "react-select": "^5.8.0",
     "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
+    "react-webcam": "^7.2.0",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
