--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "admin",
+  "homepage": "sagnihotri773.github.io/react-school-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -49,7 +50,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": [
@@ -71,6 +74,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
