--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin",
-  "homepage": "sagnihotri773.github.io/react-school-admin",
+  "homepage": "https://sagnihotri773.github.io/react-school-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
